# django-pg-extensions

./: .dockerignore  .gitignore  README.md  docker-compose.yml  manage.py  psql-Dockerfile  setup.cfg  tox-Dockerfile
djangopg/: copy.py  fields.py  test_settings.py
djangopg/postgresql_psycopg2/: base.py
docker/database/: Dockerfile  setup_db.sh
docker/tox/: Dockerfile
integration_tests/: apps.py
integration_tests/migrations/: 0001_initial.py
requirements/: tests.txt
test_app/: models.py
test_app/migrations/: 0001_initial.py
tests/: data.py  settings.py  test_base.py  test_copy.py  test_pg.py  test_where.py
tests/resource_app/: apps.py  models.py
tests/resource_app/migrations/: 0001_initial.py
tests/test_fields/: test_array_field.py
