[metadata]
name = django-pg-extensions
version = 0.2.0
author = Scurri
author_email = dev@scurri.com
description = Extensions for Django to fully utilize PostgreSQL
url = https://github.com/Scurri/django-pg-extensions
license_file = LICENSE

[options]
include_package_data = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    Django==1.8.18

[options.packages.find]
exclude =
    tests*

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
addopts = -q

[tox:tox]
envlist = py27,py34

[testenv]
commands = pytest -q --disable-warnings --cov-report term-missing --cov=djangopg tests
deps =
    pytest==4.6.11
    pytest-cov==2.8.1
    pytest-django==3.10.0
    psycopg2==2.7.7

[testenv:py27]
install_command = pip install -q --no-index --find-links=file:///app/pip-cache {opts} {packages}
